# SantLipi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: bump.yml  prerelease.yml  publish.yml  release.yml
qa/: README.md
qa/html/: style.css
qa/mustache/: index.html  proof.html  side_by_side.html
scripts/: build.py  constants.py  ensure_build_dir.py  make.py  qa.py  tests.py
scripts/mustache/: index.html  proof.html  readme.html  side_by_side.html
scripts/tests/: mark_attachments.py  most_common_words.py  multi_vowel_attachments.py  tests.py
sources/: SantLipi v0.26.0.glyphs  SantLipi.glyphs  SantLipiTest.glyphs
tests/: index.html  style.css
tests/features/: historical-ligatures.html
tests/proofing/: gurmukhi-letters.html  gurmukhi-marks.html  gurmukhi-numbers.html  gurmukhi-tests.html  latin.html
tests/proofs/: gurmukhi-letters.html  gurmukhi-marks.html  gurmukhi-numbers.html  latin.html
tests/tests/: diacritics.html  nasalizations.html  spg.html  subscripts.html  yayya.html
